--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy to AWS EC2
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   deploy:
@@ -33,7 +33,7 @@ jobs:
         if [ ! -d ".git" ]; then
           git clone https://github.com/your-username/your-repo.git .
         else
-          git pull origin main
+          git pull origin master
         fi
 
         # Install Nginx if not installed
