--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,9 @@ jobs:
         chmod 600 ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-    - name: Deploy to EC2
+       - name: Deploy to EC2
       run: |
-        ssh -tt ubuntu@${{ secrets.EC2_HOST }} <<EOF
+        ssh -o ServerAliveInterval=60 -tt ubuntu@${{ secrets.EC2_HOST }} <<EOF
         set -e  # Exit on errors
 
         # Ensure project directory exists with correct permissions
@@ -34,7 +34,7 @@ jobs:
         if [ ! -d ".git" ]; then
           git clone https://github.com/your-username/your-repo.git .
         else
-          git pull origin master
+          git pull origin main
         fi
 
         # Install Nginx if not installed
