--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         chmod 600 ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-       - name: Deploy to EC2
+    - name: Deploy to EC2  # <-- FIXED INDENTATION
       run: |
         ssh -o ServerAliveInterval=60 -tt ubuntu@${{ secrets.EC2_HOST }} <<EOF
         set -e  # Exit on errors
